Actualizacion de codigo para webpage

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-	background-image: url(/images/Encriptar.jpg);
+	background-image: url(images/Encriptar.jpg);
 	background-size: cover;
 }
 
